[Shruthin]Added Integration Test for User APIs
