# src/swagger/swagger.json
@@ -2,15 +2,15 @@
     "swagger": "2.0",
     "info": {
         "version": "v1",
-        "title": "FUNDOO NOTES",
-        "description": " FUNDOO NOTES CLI API"
+        "title": "Fundoo-Notes App",
+        "description": "EXP-API-CLI"
     },
     "host": "localhost:3000",
     "basePath": "/api/v1/",
     "tags": [
         {
             "name": "CLI",
-            "description": "Creating user...."
+            "description": "USER-NOTES-API"
         }
     ],
     "schemes": [
@@ -28,12 +28,13 @@
                 "tags": [
                     "User"
                 ],
-                "description": "Create registration",
+                "description": "Create new registration",
                 "parameters": [
                     {
-                        "name": "Create User",
+                        "name": "User",
                         "in": "body",
-                        "description": "User",
+                        "description": "User Details",
+                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/User"
                         }
@@ -62,7 +63,7 @@
                     {
                         "name": "Login",
                         "in": "body",
-                        "description": "Login",
+                        "description": "Login Details",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/Login"
@@ -82,12 +83,7 @@
                     "500": {
                         "description": "Internal Server Error"
                     }
-                },
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ]
+                }
             }
         },
         "/note": {
@@ -100,10 +96,10 @@
                     {
                         "name": "Notes",
                         "in": "body",
-                        "description": "Note",
+                        "description": "Note Details",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/AddNote"
+                            "$ref": "#/definitions/Note"
                         }
                     }
                 ],
@@ -134,8 +130,6 @@
                 "description": "Get all notes of user",
                 "parameters": [
                     {
-                        "name": "Notes",
-                        "description": "Note",
                         "required": false
                     }
                 ],
@@ -148,6 +142,116 @@
                 "responses": {
                     "200": {
                         "description": "All Notes of user fetched Successfully"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            }
+        },
+        "/note/{_id}": {
+            "get": {
+                "tags": [
+                    "Notes"
+                ],
+                "description": "Get Note by id",
+                "parameters": [
+                    {
+                        "name": "_id",
+                        "in": "path",
+                        "description": "Note ID",
+                        "required": true
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Single Notes by id fetched Successfully"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Notes"
+                ],
+                "description": "Update Note of user",
+                "parameters": [
+                    {
+                        "name": "_id",
+                        "in": "path",
+                        "description": "Note ID",
+                        "required": true
+                    },
+                    {
+                        "name": "Note",
+                        "in": "body",
+                        "description": "Updated Note Details",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Note"
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Note Updated asuccessfully"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Notes"
+                ],
+                "description": "Delete Note",
+                "parameters": [
+                    {
+                        "name": "_id",
+                        "in": "path",
+                        "description": " Note ID",
+                        "required": true
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Note deleted Successfully"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -170,8 +274,8 @@
                     {
                         "name": "_id",
                         "in": "path",
-                        "description": "Note",
-                        "required":false
+                        "description": "Note ID",
+                        "required": true
                     }
                 ],
                 "produces": [
@@ -182,7 +286,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Archieved Notes fetched"
+                        "description": "Archieved Note successfully"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -200,55 +304,13 @@
                 "tags": [
                     "Notes"
                 ],
-                "description": "Trashed Notes",
-                "parameters": [
-                    {
-                        "name": "_id",
-                        "in" :"path",
-                        "description": "Note",
-                        "required":false
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Archieved Notes fetched"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                },
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ]
-            }
-        },
-        "/note/{_id}": {
-            "put": {
-                "tags": [
-                    "Notes"
-                ],
-                "description": "Update Note of user",
+                "description": "Trash Notes",
                 "parameters": [
                     {
                         "name": "_id",
                         "in": "path",
-                        "description": "id",
-                        "required": false
-                    },
-                    {
-                        "in": "body",
-                        "name": "Update Note",
-                        "schema": {
-                            "$ref": "#/definitions/Update"
-                        }
+                        "description": "Note ID",
+                        "required": true
                     }
                 ],
                 "produces": [
@@ -259,40 +321,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "All Notes of user fetched Successfully"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                },
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ]
-            },
-            "delete": {
-                "tags": [
-                    "Notes"
-                ],
-                "description": "Delete Note",
-                "parameters": [
-                    {
-                        "name": "_id",
-                        "in": "path",
-                        "description": "id",
-                        "required": false
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "All Notes of user fetched Successfully"
+                        "description": "Note Sent to Trash sucessfully"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -313,13 +342,13 @@
                 "description": "Forget password",
                 "parameters": [
                     {
-                        "name": "_id",
+                        "name": "email ",
                         "in": "body",
                         "type": "string",
-                        "description": "Single Note",
+                        "description": "registered email id",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/ForgetPassword"
+                            "$ref": "#/definitions/forgetPassword"
                         }
                     }
                 ],
@@ -331,7 +360,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Password with new token generated"
+                        "description": "link to reset password send"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -339,7 +368,7 @@
                 }
             }
         },
-        "/users/setpass/{_id}": {
+        "/users/setpass": {
             "put": {
                 "tags": [
                     "User"
@@ -347,13 +376,13 @@
                 "description": "Reset password",
                 "parameters": [
                     {
-                        "name": "email",
+                        "name": "password",
                         "in": "body",
                         "type": "string",
-                        "description": "Email Id",
+                        "description": "New Password",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/ResetPassword"
+                            "$ref": "#/definitions/resetPassword"
                         }
                     }
                 ],
@@ -408,47 +437,7 @@
                 }
             }
         },
-        "AddNote": {
-            "type": "object",
-            "properties": {
-                "Title": {
-                    "type": "string"
-                },
-                "Description": {
-                    "type": "string"
-                },
-                "Color": {
-                    "type": "string"
-                },
-                "isArchieved": {
-                    "type": "boolean"
-                },
-                "isDeleted": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "Update": {
-            "type": "object",
-            "properties": {
-                "Title": {
-                    "type": "string"
-                },
-                "Description": {
-                    "type": "string"
-                },
-                "Color": {
-                    "type": "string"
-                },
-                "isArchieved": {
-                    "type": "boolean"
-                },
-                "isDeleted": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "ForgetPassword": {
+        "forgetPassword": {
             "type": "object",
             "properties": {
                 "email": {
@@ -456,10 +445,24 @@
                 }
             }
         },
-        "ResetPassword": {
+        "resetPassword": {
             "type": "object",
             "properties": {
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "Note": {
+            "type": "object",
+            "properties": {
+                "Title": {
+                    "type": "string"
+                },
+                "Description": {
+                    "type": "string"
+                },
+                "Color": {
                     "type": "string"
                 }
             }
@@ -472,4 +475,4 @@
             "in": "header"
         }
     }
-  }
+}
